--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "egg": "^2.0.0",
     "egg-scripts": "^2.5.0",
+    "egg-static": "^2.1.0",
     "egg-view-nunjucks": "^2.1.4"
   },
   "devDependencies": {
