antDesign静态资源 与 普通静态资源相分离

--- a/static_antd/.webpackrc
+++ b/static_antd/.webpackrc
@@ -16,7 +16,7 @@
   "html": {
     "template": "./src/index.ejs"
   },
-  "publicPath": "/public/",
+  "publicPath": "/public/antDesign/",
   "disableDynamicImport": true,
   "hash": true
 }
