切分小文件

--- a/static_antd/.webpackrc
+++ b/static_antd/.webpackrc
@@ -17,6 +17,6 @@
     "template": "./src/index.ejs"
   },
   "publicPath": "/public/antDesign/",
-  "disableDynamicImport": true,
+  "disableDynamicImport": false,
   "hash": true
 }
