修改启动脚本

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node": ">=6.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon",
+    "start": "egg-scripts start --daemon --title=wealth-manager --port=7001 --env=prod",
     "stop": "egg-scripts stop",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
