--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "egg-mock": "^3.14.0",
     "eslint": "^4.13.1",
     "eslint-config-egg": "^6.0.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-compat": "^2.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-markdown": "^1.0.0-beta.6",
+    "eslint-plugin-react": "^7.0.1",
     "webstorm-disable-index": "^1.2.0"
   },
   "engines": {
