--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "egg-view-nunjucks": "^2.1.4"
   },
   "devDependencies": {
+    "babel-eslint": "^8.1.2",
+    "babel-plugin-dva-hmr": "^0.4.1",
+    "babel-plugin-import": "^1.6.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
     "egg-bin": "^4.3.7",
