--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "egg": "^2.3.0",
+    "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.5.1",
     "egg-static": "^2.1.0",
     "egg-view-nunjucks": "^2.1.4"
