--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "egg": "^2.3.0",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.5.1",
+    "egg-sequelize": "^4.3.1",
     "egg-static": "^2.1.1",
-    "egg-view-nunjucks": "^2.2.0"
+    "egg-view-nunjucks": "^2.2.0",
+    "mysql2": "^1.6.4"
   },
   "devDependencies": {
     "autod": "^3.0.1",
@@ -29,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-markdown": "^1.0.0-beta.6",
     "eslint-plugin-react": "^7.12.3",
+    "sequelize-cli": "^5.4.0",
     "webstorm-disable-index": "^1.2.0"
   },
   "engines": {
