--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "egg-sequelize": "^4.3.1",
     "egg-static": "^2.1.1",
     "egg-view-nunjucks": "^2.2.0",
+    "eslint-config-ali": "^5.0.1",
     "mysql2": "^1.6.4"
   },
   "devDependencies": {
