--- a/static_aisc/package.json
+++ b/static_aisc/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.2",
     "query-string": "^4.2.3",
     "react-cookie": "^0.4.8",
+    "react-router-dom": "^4.3.1",
     "redux-logger": "^2.7.4"
   },
   "devDependencies": {
@@ -45,7 +46,7 @@
     "browser-sync-webpack-plugin": "^1.1.3",
     "css-loader": "^0.24.0",
     "eslint": "^4.1.1",
-    "eslint-config-ali": "^2.0.1",
+    "eslint-config-ali": "^2.0.3",
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^2.1.2",
