--- a/static_aisc/package.json
+++ b/static_aisc/package.json
@@ -23,7 +23,7 @@
     "classnames": "^2.2.5",
     "core-decorators": "^0.19.0",
     "exceed": "1",
-    "lodash": "^4.17.2",
+    "lodash": ">=4.17.5",
     "query-string": "^4.2.3",
     "react-cookie": "^0.4.8",
     "react-router-dom": "^4.3.1",
