增加fund表，保存基金信息和累计净值

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Statistics for foundation investment.",
   "private": true,
   "dependencies": {
+    "async-request": "^1.2.0",
     "egg": "^2.3.0",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.5.1",
