--- a/static_aisc/package.json
+++ b/static_aisc/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --port 9000 --host 0.0.0.0 --env.development",
-    "build": "./node_modules/.bin/webpack --config ./webpack.config.js --env.production",
+    "build": "./node_modules/.bin/webpack --config ./webpack.config.js --env.production --mode=production",
     "publish": "./node_modules/webpack/bin/webpack.js  --config ./webpack.config.js",
     "eslint-check": "./node_modules/eslint/bin/eslint.js",
     "eslint-fix": "./node_modules/eslint/bin/eslint.js --fix --ext .jsx,.js ./src/",
@@ -21,51 +21,53 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "core-decorators": "^0.19.0",
+    "core-decorators": "^0.20.0",
     "exceed": "1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "lodash": ">=4.17.5",
-    "query-string": "^4.2.3",
-    "react-cookie": "^0.4.8",
+    "query-string": "^6.3.0",
+    "react-cookie": "^3.0.8",
     "react-router-dom": "^4.3.1",
-    "redux-logger": "^2.7.4"
+    "redux-logger": "^3.0.6",
+    "terser-webpack-plugin": "^1.2.3"
   },
   "devDependencies": {
-    "babel-cli": "~6.7.5",
-    "babel-core": "~6.7.6",
-    "babel-eslint": "^8.1.1",
-    "babel-loader": "~6.2.4",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "~6.5.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "browser-sync": "^2.18.6",
-    "browser-sync-webpack-plugin": "^1.1.3",
-    "css-loader": "^0.24.0",
-    "eslint": "^4.1.1",
-    "eslint-config-ali": "^2.0.3",
-    "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-react": "^7.1.0",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "fs-extra": "^0.30.0",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.15.1",
+    "eslint-config-ali": "^5.0.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-react": "^7.12.4",
+    "fs-extra": "^7.0.1",
     "html-loader": "^0.5.1",
-    "husky": "^0.14.2",
-    "lint-staged": "^4.0.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
     "node-sass": "^4.5.3",
-    "raw-loader": "^0.5.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
+    "raw-loader": "^1.0.0",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.1.0",
-    "sass-loader": "^6.0.6",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "url-loader": "^0.5.9",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5",
+    "sass-loader": "^7.1.0",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1",
     "webpack-notifier": "^1.5.0"
   },
   "optionalDependencies": {
