fix bug: line chart rendering failed while total assets equals zero

--- a/static_aisc/package.json
+++ b/static_aisc/package.json
@@ -8,33 +8,30 @@
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --port 9000 --host 0.0.0.0 --env.development",
     "build": "./node_modules/.bin/webpack --config ./webpack.config.js --env.production --mode=production",
-    "publish": "./node_modules/webpack/bin/webpack.js  --config ./webpack.config.js",
     "eslint-check": "./node_modules/eslint/bin/eslint.js",
     "eslint-fix": "./node_modules/eslint/bin/eslint.js --fix --ext .jsx,.js ./src/",
-    "eslint-output": "./node_modules/eslint/bin/eslint.js -f html --ext .jsx,.js ./src/ > eslint-result.html",
-    "ci-eslint": "./node_modules/.bin/eslint -o eslint.json -f json ./",
-    "ci-log:eslint": "./node_modules/.bin/ci-log -r eslint -p ./eslint.json",
     "precommit": ""
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": "eslint-check"
   },
   "dependencies": {
+    "ajv": "^6.11.0",
     "classnames": "^2.2.5",
     "core-decorators": "^0.20.0",
-    "exceed": "1",
+    "exceed": "^1.7.8",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "lodash": ">=4.17.5",
-    "query-string": "^6.3.0",
-    "react-cookie": "^3.0.8",
+    "lodash": "^4.17.15",
+    "query-string": "^6.11.0",
+    "react-cookie": "^3.1.2",
     "react-router-dom": "^4.3.1",
     "redux-logger": "^3.0.6",
-    "terser-webpack-plugin": "^1.2.3"
+    "terser-webpack-plugin": "^1.4.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -44,30 +41,30 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "browser-sync": "^2.18.6",
+    "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
-    "css-loader": "^2.1.0",
-    "eslint": "^5.15.1",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
     "eslint-config-ali": "^5.0.1",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-react": "^7.18.3",
     "fs-extra": "^7.0.1",
     "html-loader": "^0.5.1",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
-    "node-sass": "^4.5.3",
+    "lint-staged": "^8.2.1",
+    "node-sass": "4.10.0",
     "raw-loader": "^1.0.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-redux": "^6.0.1",
-    "redux": "^4.0.1",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.1.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-notifier": "^1.5.0"
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-notifier": "^1.8.0"
   },
   "optionalDependencies": {
     "babel-preset-flow": "^6.23.0",
